reset withou verification debugged
