# tides-server/pkg/restapi/operations/cloud_tides_api.go
@@ -197,6 +197,9 @@ func NewCloudTidesAPI(spec *loads.Document) *CloudTidesAPI {
 		PolicyRemovePolicyHandler: policy.RemovePolicyHandlerFunc(func(params policy.RemovePolicyParams) middleware.Responder {
 			return middleware.NotImplemented("operation policy.RemovePolicy has not yet been implemented")
 		}),
+		UserResetPasswordHandler: user.ResetPasswordHandlerFunc(func(params user.ResetPasswordParams) middleware.Responder {
+			return middleware.NotImplemented("operation user.ResetPassword has not yet been implemented")
+		}),
 		PolicyUpdatePolicyHandler: policy.UpdatePolicyHandlerFunc(func(params policy.UpdatePolicyParams) middleware.Responder {
 			return middleware.NotImplemented("operation policy.UpdatePolicy has not yet been implemented")
 		}),
@@ -354,6 +357,8 @@ type CloudTidesAPI struct {
 	UserRegisterUserHandler user.RegisterUserHandler
 	// PolicyRemovePolicyHandler sets the operation handler for the remove policy operation
 	PolicyRemovePolicyHandler policy.RemovePolicyHandler
+	// UserResetPasswordHandler sets the operation handler for the reset password operation
+	UserResetPasswordHandler user.ResetPasswordHandler
 	// PolicyUpdatePolicyHandler sets the operation handler for the update policy operation
 	PolicyUpdatePolicyHandler policy.UpdatePolicyHandler
 	// ProjectUpdateProjectHandler sets the operation handler for the update project operation
@@ -590,6 +595,9 @@ func (o *CloudTidesAPI) Validate() error {
 	}
 	if o.PolicyRemovePolicyHandler == nil {
 		unregistered = append(unregistered, "policy.RemovePolicyHandler")
+	}
+	if o.UserResetPasswordHandler == nil {
+		unregistered = append(unregistered, "user.ResetPasswordHandler")
 	}
 	if o.PolicyUpdatePolicyHandler == nil {
 		unregistered = append(unregistered, "policy.UpdatePolicyHandler")
@@ -893,6 +901,10 @@ func (o *CloudTidesAPI) initHandlerCache() {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
 	o.handlers["DELETE"]["/policy/{id}"] = policy.NewRemovePolicy(o.context, o.PolicyRemovePolicyHandler)
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/users/reset"] = user.NewResetPassword(o.context, o.UserResetPasswordHandler)
 	if o.handlers["PUT"] == nil {
 		o.handlers["PUT"] = make(map[string]http.Handler)
 	}
