# tides-server/swagger/swagger.yml
@@ -648,6 +648,44 @@ paths:
                 type: string
                 enum:
                   - 'Unauthorized'
+
+  /users/reset:
+    post:
+      operationId: 'resetPassword'
+      description: 'reset password'
+      tags:
+        - 'user'
+      produces:
+        - 'application/json'
+      consumes:
+        - 'application/json'
+      parameters:
+        - in: body
+          name: reqBody
+          schema:
+            type: object
+            properties:
+              username:
+                type: string
+              password:
+                type: string
+              newPassword:
+                type: string
+      responses:
+        200:
+          description: 'OK'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        400:
+          description: 'bad request'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
   /users/register:
     post:
       operationId: 'registerUser'
